--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <a class = "menu" href=""><img  id = "logo" src="" alt="">MONLO</a>
         <a class = "menu" href="">Contacto</a>
         <a class = "menu" href="">Sobre mí</a>
+        <a class = "menu" href="">Sobre mí</a>
+        <a class = "menu" href="">Sobre mí</a>
+        <a class = "menu" href="">Sobre mí</a>
         <a id = "tienda" class = "menu" href="">Tienda</a>
     </div>
 
@@ -79,8 +82,7 @@
                             </div>
                         </div>
                     </div>
-
-<img id = "banner" src="https://previews.123rf.com/images/gmast3r/gmast3r1711/gmast3r171100640/92369514-conjunto-de-elementos-de-infograf%C3%ADa-futurista-de-computadora-resumen-de-tecnolog%C3%ADa-banner-horizontal.jpg" alt="">
+<p></p>
 
 <div class = "tittles">
     <a href="">Productos</a>
